Create public field configuration for the pojo models.

--- a/src/main/resources/handlebars/mp-rest-client/pojo.mustache
+++ b/src/main/resources/handlebars/mp-rest-client/pojo.mustache
@@ -30,7 +30,7 @@ public class {{classname}} {{#parent}}extends {{{parent}}}{{/parent}} {{#seriali
   {{^generateGetterSetter}}
   {{#jackson}}@JsonProperty(value="{{baseName}}", required={{required}}){{/jackson}}{{#jsonb}}@JsonbProperty("{{baseName}}"){{/jsonb}}
   {{/generateGetterSetter}}
-  private {{#useBeanValidation}}@Valid{{/useBeanValidation}} {{{datatypeWithEnum}}} {{name}} = {{{defaultValue}}};
+  {{#fieldPublic}}public{{/fieldPublic}}{{^fieldPublic}}private{{/fieldPublic}} {{#useBeanValidation}}@Valid{{/useBeanValidation}} {{{datatypeWithEnum}}} {{name}} = {{{defaultValue}}};
   {{/vars}}
 
   {{#generateGetterSetter}}
