Refactoring and fix Swagger Schema issue

--- a/src/main/resources/handlebars/lorislab-mp-rest-client/enumOuterClass.mustache
+++ b/src/main/resources/handlebars/lorislab-mp-rest-client/enumOuterClass.mustache
@@ -3,6 +3,10 @@ import com.fasterxml.jackson.annotation.JsonValue;
 import com.fasterxml.jackson.annotation.JsonProperty;{{/jackson}}
 {{#jsonb}}import javax.json.bind.annotation.JsonbProperty;{{/jsonb}}
 
+{{#description}}
+/**
+* {{description}}
+**/{{/description}}
 public enum {{classname}} {
     {{#allowableValues}}
     {{#enumVars}}
